Add "--scan-module-path" to the command line options
Internally it is treated as if "--select-module ALL-MODULES" was given.
In the future "--scan-module-path" might support custom path entries
that are routed to the 'ModuleFinder.of(...)' factory method allowing
custom module-paths to be specified at runtime.